--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,14 +11,19 @@
     "debug": "node --inspect-brk lib/index.js",
     "lint": "eslint --ext .jsx,.js . || exit 0"
   },
-  "keywords": ["rastreo", "control", "trenes", "ferroviario"],
+  "keywords": [
+    "rastreo",
+    "control",
+    "trenes",
+    "ferroviario"
+  ],
   "author": "Daniel Barreiro",
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.0.3",
     "babel-preset-env": "^1.6.1",
-    "eslint": "^4.12.1",
+    "eslint": "^4.13.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-import": "^2.8.0",
