added commands to make global operations easier

--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
-	"devDependencies": {
-		"lerna": "^2.5.1"
-	}
+  "scripts": {
+    "start": "lerna run start --parallel --stream",
+    "build": "lerna run build",
+    "bootstrap": "lerna bootstrap",
+    "test": "lerna run test"
+  },
+  "devDependencies": {
+    "lerna": "^2.5.1"
+  }
 }
