--- a/packages/desktop/package.json
+++ b/packages/desktop/package.json
@@ -2,11 +2,6 @@
   "name": "sistract-desktop",
   "version": "0.0.0",
   "description": "Sistrac - Desktop Client Version",
-  "proxy": {
-    "/data/v2": {
-      "target": "http://localhost:8080/data/v2"
-    }
-  },
   "dependencies": {
     "bootstrap": "^3.3.7",
     "prop-types": "^15.6.0",
@@ -14,6 +9,7 @@
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.2.0",
     "react-helmet": "^5.2.0",
+    "react-leaflet": "^1.7.8",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
