--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -11,7 +11,12 @@
     "debug": "node --inspect-brk lib/index.js",
     "lint": "eslint --ext .jsx,.js . || exit 0"
   },
-  "keywords": ["rastreo", "control", "trenes", "ferroviario"],
+  "keywords": [
+    "rastreo",
+    "control",
+    "trenes",
+    "ferroviario"
+  ],
   "author": "Daniel Barreiro",
   "license": "MIT",
   "devDependencies": {
@@ -22,7 +27,7 @@
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-import": "^2.8.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
     "jest": "^21.2.1"
   },
@@ -30,6 +35,7 @@
     "babel-preset-stage-1": "^6.24.1",
     "body-parser": "^1.18.2",
     "compression": "^1.7.1",
+    "cookie-parser": "^1.4.3",
     "debug": "^3.1.0",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.0",
