Improved on some npm scripts to ensure portability

--- a/packages/desktop/package.json
+++ b/packages/desktop/package.json
@@ -20,7 +20,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "run-s build:clean build:compile",
+    "build:clean": "rimraf build",
+    "build:compile": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "eslint --ext .jsx,.js . || exit 0"
