--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,17 +6,14 @@
   "scripts": {
     "test": "jest",
     "debugTest": "node --inspect-brk node_modules/.bin/jest --runInBand",
-    "build": "rm lib -rf & babel src -d lib -s --ignore __tests__",
+    "build": "run-s build:clean build:compile",
+    "build:clean": "rimraf lib",
+    "build:compile": "babel src -d lib -s --ignore __tests__",
     "start": "node lib/index.js",
     "debug": "node --inspect-brk lib/index.js",
     "lint": "eslint --ext .jsx,.js . || exit 0"
   },
-  "keywords": [
-    "rastreo",
-    "control",
-    "trenes",
-    "ferroviario"
-  ],
+  "keywords": ["rastreo", "control", "trenes", "ferroviario"],
   "author": "Daniel Barreiro",
   "license": "MIT",
   "devDependencies": {
