--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,7 +9,7 @@
     "build": "run-s build:clean build:compile",
     "build:clean": "rimraf lib",
     "build:compile": "babel src -d lib -s --ignore __tests__",
-    "start": "node lib/index.js",
+    "start": "nodemon --watch src/ --ignore __tests__/",
     "debug": "node --inspect-brk lib/index.js",
     "lint": "eslint --ext .jsx,.js . || exit 0"
   },
@@ -20,16 +20,17 @@
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.0.3",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-stage-1": "^6.24.1",
     "eslint": "^4.13.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
-    "jest": "^21.2.1"
+    "jest": "^21.2.1",
+    "nodemon": "^1.13.3"
   },
   "dependencies": {
-    "babel-preset-stage-1": "^6.24.1",
     "body-parser": "^1.18.2",
     "compression": "^1.7.1",
     "cookie-parser": "^1.4.3",
@@ -41,8 +42,6 @@
     "morgan": "^1.9.0",
     "mysql": "^2.15.0",
     "node-fetch": "^1.7.3",
-    "node-mysql-promise2": "^0.1.2",
-    "passport": "^0.4.0",
-    "passport-jwt": "^3.0.1"
+    "node-mysql-promise2": "^0.1.2"
   }
 }
