--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "start": "lerna run start --parallel --stream",
     "build": "lerna run build --parallel --stream",
-    "bootstrap": "lerna bootstrap",
+    "bootstrap": "lerna bootstrap --hoist",
     "test": "lerna run test --stream",
     "lint": "lerna run lint --stream"
   },
