--- a/packages/desktop/package.json
+++ b/packages/desktop/package.json
@@ -30,7 +30,9 @@
   "devDependencies": {
     "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "fetch-mock": "^5.13.1",
     "jest-enzyme": "^4.0.1",
-    "react-test-renderer": "^16.2.0"
+    "react-test-renderer": "^16.2.0",
+    "redux-mock-store": "^1.3.0"
   }
 }
