--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,7 +9,9 @@
     "build": "run-s build:clean build:compile",
     "build:clean": "rimraf lib",
     "build:compile": "babel src -d lib -s --ignore __tests__",
-    "start": "nodemon --watch src/ --ignore __tests__/",
+    "start": "nodemon --watch src/ --ignore __tests__/ --exec npm run buildAndRun",
+    "buildAndRun": "run-s build run",
+    "run": "node lib/index.js",
     "debug": "node --inspect-brk lib/index.js",
     "lint": "eslint --ext .jsx,.js . || exit 0"
   },
@@ -33,7 +35,9 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
     "jest": "^22.0.4",
-    "nodemon": "^1.14.2"
+    "nodemon": "^1.14.2",
+    "npm-run-all": "^4.1.2",
+    "rimraf": "^2.6.2"
   },
   "dependencies": {
     "body-parser": "^1.18.2",
