--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
     "lint": "lerna run lint --stream"
   },
   "devDependencies": {
-    "lerna": "^2.5.1",
-    "npm-run-all": "^4.1.2",
-    "rimraf": "^2.6.2"
+    "lerna": "^2.5.1"
   }
 }
