--- a/packages/desktop/package.json
+++ b/packages/desktop/package.json
@@ -32,7 +32,9 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "fetch-mock": "^5.13.1",
     "jest-enzyme": "^4.0.1",
+    "npm-run-all": "^4.1.2",
     "react-test-renderer": "^16.2.0",
-    "redux-mock-store": "^1.3.0"
+    "redux-mock-store": "^1.3.0",
+    "rimraf": "^2.6.2"
   }
 }
