--- a/packages/desktop/package.json
+++ b/packages/desktop/package.json
@@ -4,7 +4,9 @@
   "description": "Sistrac - Desktop Client Version",
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "formatcoords": "^1.1.3",
     "leaflet": "^1.2.0",
+    "parse-dms": "0.0.3",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-bootstrap": "^0.31.5",
