--- a/packages/desktop/package.json
+++ b/packages/desktop/package.json
@@ -38,5 +38,8 @@
     "react-test-renderer": "^16.2.0",
     "redux-mock-store": "^1.3.0",
     "rimraf": "^2.6.2"
+  },
+  "jest": {
+    "coverageReporters": ["html", "text"]
   }
 }
