--- a/packages/desktop/package.json
+++ b/packages/desktop/package.json
@@ -27,7 +27,8 @@
     "build:compile": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "eslint --ext .jsx,.js . || exit 0"
+    "lint": "eslint --ext .jsx,.js . || exit 0",
+    "analyze": "source-map-explorer build/static/js/main.*"
   },
   "devDependencies": {
     "enzyme": "^3.2.0",
@@ -37,9 +38,13 @@
     "npm-run-all": "^4.1.2",
     "react-test-renderer": "^16.2.0",
     "redux-mock-store": "^1.3.0",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "source-map-explorer": "^1.5.0"
   },
   "jest": {
-    "coverageReporters": ["html", "text"]
+    "coverageReporters": [
+      "html",
+      "text"
+    ]
   }
 }
