Provided a script to copy a single config.js file at the root to all - and changed some files to use that copy -createReactApp refuses to pack files outside of the `src` folder so the config had to be copied over.

--- a/package.json
+++ b/package.json
@@ -4,9 +4,14 @@
     "build": "lerna run build --parallel --stream",
     "bootstrap": "lerna bootstrap --hoist",
     "test": "lerna run test --stream",
-    "lint": "lerna run lint --stream"
+    "lint": "lerna run lint --stream",
+    "config": "node ./scripts/copyConfig.js",
+    "vroots": "lerna exec node \\$LERNA_ROOT_PATH/scripts/vRoots.js",
+    "postinstall": "npm run config && npm run vroots"
   },
   "devDependencies": {
-    "lerna": "^2.5.1"
+    "lerna": "^2.5.1",
+    "mkdirp": "^0.5.1",
+    "rimraf": "^2.6.2"
   }
 }
