Made a script to create virtual folders so imports can use absolute paths - import paths no longer have `../../` in their `from` part.

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -8,8 +8,8 @@
     "debugTest": "node --inspect-brk node_modules/.bin/jest --runInBand",
     "build": "run-s build:clean build:compile",
     "build:clean": "rimraf lib",
-    "build:compile": "babel src -d lib -s --ignore __tests__",
-    "start": "nodemon --watch src/ --ignore __tests__/ --exec npm run buildAndRun",
+    "build:compile": "babel src -d lib -s --ignore _*",
+    "start": "nodemon --watch src/ --ignore _* --exec npm run buildAndRun",
     "buildAndRun": "run-s build run",
     "run": "node lib/index.js",
     "debug": "node --inspect-brk lib/index.js",
@@ -35,7 +35,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
     "jest": "^22.0.4",
-    "nodemon": "^1.14.5",
+    "nodemon": "^1.14.7",
     "npm-run-all": "^4.1.2",
     "rimraf": "^2.6.2"
   },
