--- a/packages/desktop/package.json
+++ b/packages/desktop/package.json
@@ -21,23 +21,24 @@
     "redux-thunk": "^2.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "run-s build:clean build:compile",
+    "start": "cross-env NODE_PATH=$NODE_PATH:./src/_ react-scripts start",
+    "build": "cross-env NODE_PATH=$NODE_PATH:./src/_ run-s build:clean build:compile",
     "build:clean": "rimraf build",
     "build:compile": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "cross-env NODE_PATH=$NODE_PATH:./src/_ react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "eslint --ext .jsx,.js . || exit 0",
     "analyze": "source-map-explorer build/static/js/main.*"
   },
   "devDependencies": {
-    "enzyme": "^3.2.0",
+    "cross-env": "^5.1.3",
+    "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "fetch-mock": "^5.13.1",
-    "jest-enzyme": "^4.0.1",
+    "jest-enzyme": "^4.0.2",
     "npm-run-all": "^4.1.2",
     "react-test-renderer": "^16.2.0",
-    "redux-mock-store": "^1.3.0",
+    "redux-mock-store": "^1.4.0",
     "rimraf": "^2.6.2",
     "source-map-explorer": "^1.5.0"
   },
