--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -15,12 +15,7 @@
     "debug": "node --inspect-brk lib/index.js",
     "lint": "eslint --ext .jsx,.js . || exit 0"
   },
-  "keywords": [
-    "rastreo",
-    "control",
-    "trenes",
-    "ferroviario"
-  ],
+  "keywords": ["rastreo", "control", "trenes", "ferroviario"],
   "author": "Daniel Barreiro",
   "license": "MIT",
   "devDependencies": {
@@ -40,11 +35,14 @@
     "rimraf": "^2.6.2"
   },
   "dependencies": {
+    "apollo-server-express": "^1.3.2",
     "body-parser": "^1.18.2",
     "compression": "^1.7.1",
     "cookie-parser": "^1.4.3",
     "debug": "^3.1.0",
     "express": "^4.16.2",
+    "graphql": "^0.12.3",
+    "graphql-tools": "^2.16.0",
     "jsonwebtoken": "^8.1.0",
     "lodash": "^4.17.4",
     "md5": "^2.2.1",
