--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -15,22 +15,27 @@
     "debug": "node --inspect-brk lib/index.js",
     "lint": "eslint --ext .jsx,.js . || exit 0"
   },
-  "keywords": ["rastreo", "control", "trenes", "ferroviario"],
+  "keywords": [
+    "rastreo",
+    "control",
+    "trenes",
+    "ferroviario"
+  ],
   "author": "Daniel Barreiro",
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.1.2",
+    "babel-eslint": "^8.2.1",
     "babel-preset-env": "^1.6.1",
     "babel-preset-stage-1": "^6.24.1",
-    "eslint": "^4.14.0",
+    "eslint": "^4.15.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
-    "jest": "^22.0.4",
-    "nodemon": "^1.14.7",
+    "jest": "^22.0.5",
+    "nodemon": "^1.14.10",
     "npm-run-all": "^4.1.2",
     "rimraf": "^2.6.2"
   },
@@ -42,7 +47,7 @@
     "debug": "^3.1.0",
     "express": "^4.16.2",
     "graphql": "^0.12.3",
-    "graphql-tools": "^2.16.0",
+    "graphql-tools": "^2.18.0",
     "jsonwebtoken": "^8.1.0",
     "lodash": "^4.17.4",
     "md5": "^2.2.1",
