--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -40,6 +40,7 @@
     "rimraf": "^2.6.2"
   },
   "dependencies": {
+    "@godaddy/terminus": "^2.2.0",
     "apollo-server-express": "^1.3.2",
     "body-parser": "^1.18.2",
     "compression": "^1.7.1",
