--- a/packages/desktop/package.json
+++ b/packages/desktop/package.json
@@ -3,12 +3,16 @@
   "version": "0.0.0",
   "description": "Sistrac - Desktop Client Version",
   "dependencies": {
+    "apollo-client-preset": "^1.0.6",
     "bootstrap": "^3.3.7",
     "formatcoords": "^1.1.3",
+    "graphql": "^0.12.3",
+    "graphql-tag": "^2.6.1",
     "leaflet": "^1.2.0",
     "parse-dms": "0.0.3",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
+    "react-apollo": "^2.0.4",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.2.0",
     "react-helmet": "^5.2.0",
