Enabled babel stage-1 preset features

--- a/packages/react-bootstrap/.babelrc
+++ b/packages/react-bootstrap/.babelrc
@@ -9,11 +9,12 @@
         "modules": false
       }
     ],
-    "react"
+    "react",
+    "stage-1"
   ],
   "env": {
     "test": {
-      "presets": [["env"], "react"]
+      "presets": [["env"], "react", "stage-1"]
     }
   }
 }
