--- a/packages/controls/package.json
+++ b/packages/controls/package.json
@@ -11,12 +11,16 @@
     "lint": "eslint --ext .jsx,.js . || exit 0",
     "parcel": "parcel index.html -o"
   },
-  "keywords": ["react", "bootstrap", "bootstrap@4"],
+  "keywords": [
+    "react",
+    "bootstrap",
+    "bootstrap@4"
+  ],
   "author": "Daniel Barreiro",
   "license": "MIT",
   "dependencies": {
     "classnames": "^2.2.5",
-    "parcel-bundler": "^1.4.1",
+    "parcel-bundler": "^1.5.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2"
@@ -32,9 +36,9 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.16.0",
     "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-react": "^7.5.1",
+    "eslint-plugin-react": "^7.6.1",
     "jest": "^22.1.4",
-    "jest-enzyme": "^4.0.2",
+    "jest-enzyme": "^4.1.1",
     "npm-run-all": "^4.1.2",
     "prop-types": "^15.6.0",
     "react-icons": "^2.2.7",
