--- a/packages/desktop/package.json
+++ b/packages/desktop/package.json
@@ -3,17 +3,18 @@
   "version": "0.0.0",
   "description": "Sistrac - Desktop Client Version",
   "dependencies": {
+    "@devasatyam/controls": "^1.0.0",
     "apollo-client-preset": "^1.0.6",
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^4.0.0",
     "formatcoords": "^1.1.3",
     "graphql": "^0.12.3",
     "graphql-tag": "^2.6.1",
-    "leaflet": "^1.3.0",
+    "leaflet": "^1.3.1",
     "parse-dms": "0.0.3",
     "prop-types": "^15.6.0",
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
-    "react-bootstrap": "^0.32.0",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.2.0",
     "react-helmet": "^5.2.0",
     "react-leaflet": "^1.8.0",
@@ -43,10 +44,10 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "fetch-mock": "^5.13.1",
-    "jest-enzyme": "^4.0.2",
+    "jest-enzyme": "^4.1.1",
     "npm-run-all": "^4.1.2",
     "react-test-renderer": "^16.2.0",
-    "redux-mock-store": "^1.4.0",
+    "redux-mock-store": "^1.5.1",
     "rimraf": "^2.6.2",
     "source-map-explorer": "^1.5.0"
   },
