--- a/packages/controls/package.json
+++ b/packages/controls/package.json
@@ -5,11 +5,14 @@
   "main": "lib/index.js",
   "scripts": {
     "test": "jest",
-    "build": "run-s build:clean build:compile",
+    "build": "run-s build:clean build:compile build:copyCss",
     "build:clean": "rimraf lib",
     "build:compile": "babel src -d lib -s --ignore _*",
+    "build:copyCss": "cpy '**/*.css' '../lib/' --cwd=src --parents",
     "lint": "eslint --ext .jsx,.js . || exit 0",
-    "parcel": "parcel index.html -o"
+    "parcel": "parcel index.html -o",
+    "watch": "nodemon --watch src/ --exec npm run rebuild",
+    "rebuild": "run-s build:compile build:copyCss"
   },
   "keywords": [
     "react",
@@ -32,6 +35,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
+    "cpy-cli": "^1.0.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.16.0",
@@ -39,6 +43,7 @@
     "eslint-plugin-react": "^7.6.1",
     "jest": "^22.1.4",
     "jest-enzyme": "^4.1.1",
+    "nodemon": "^1.14.11",
     "npm-run-all": "^4.1.2",
     "prop-types": "^15.6.0",
     "react-icons": "^2.2.7",
