--- a/packages/controls/package.json
+++ b/packages/controls/package.json
@@ -26,7 +26,8 @@
     "parcel-bundler": "^1.5.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "redux-form": "^7.2.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
