--- a/packages/desktop/package.json
+++ b/packages/desktop/package.json
@@ -18,23 +18,22 @@
     "react-helmet": "^5.2.0",
     "react-icons": "^2.2.7",
     "react-leaflet": "^1.8.0",
+    "react-loadable": "^5.3.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.1.0",
     "recompose": "^0.26.0",
     "redux": "^3.7.2",
+    "redux-form": "^7.2.1",
     "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "cross-env NODE_PATH=$NODE_PATH:./src/_ react-scripts start",
-    "build":
-      "cross-env NODE_PATH=$NODE_PATH:./src/_ run-s build:clean build:compile",
+    "build": "cross-env NODE_PATH=$NODE_PATH:./src/_ run-s build:clean build:compile",
     "build:clean": "rimraf build",
     "build:compile": "react-scripts build",
-    "test":
-      "cross-env NODE_PATH=$NODE_PATH:./src/_ react-scripts test --env=jsdom",
-    "test:debug":
-      "cross-env NODE_PATH=$NODE_PATH:./src/_ react-scripts --inspect-brk test --runInBand --env=jsdom",
+    "test": "cross-env NODE_PATH=$NODE_PATH:./src/_ react-scripts test --env=jsdom",
+    "test:debug": "cross-env NODE_PATH=$NODE_PATH:./src/_ react-scripts --inspect-brk test --runInBand --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "eslint --ext .jsx,.js . || exit 0",
     "analyze": "source-map-explorer build/static/js/main.*"
@@ -52,6 +51,9 @@
     "source-map-explorer": "^1.5.0"
   },
   "jest": {
-    "coverageReporters": ["html", "text"]
+    "coverageReporters": [
+      "html",
+      "text"
+    ]
   }
 }
