--- a/packages/controls/package.json
+++ b/packages/controls/package.json
@@ -10,43 +10,39 @@
     "build:compile": "babel src -d lib -s --ignore _*",
     "build:copyCss": "cpy '**/*.css' '../lib/' --cwd=src --parents",
     "lint": "eslint --ext .jsx,.js . || exit 0",
-    "parcel": "parcel index.html -o",
+    "parcel": "parcel index.html --open",
     "watch": "nodemon --watch src/ --exec npm run rebuild",
     "rebuild": "run-s build:compile build:copyCss"
   },
-  "keywords": [
-    "react",
-    "bootstrap",
-    "bootstrap@4"
-  ],
+  "keywords": ["react", "bootstrap", "bootstrap@4"],
   "author": "Daniel Barreiro",
   "license": "MIT",
   "dependencies": {
     "classnames": "^2.2.5",
-    "parcel-bundler": "^1.5.1",
+    "parcel-bundler": "^1.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
-    "redux-form": "^7.2.1"
+    "redux-form": "^7.2.3"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.1",
-    "babel-jest": "^22.1.0",
+    "babel-jest": "^22.2.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "cpy-cli": "^1.0.1",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "^4.16.0",
+    "eslint": "^4.17.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-react": "^7.6.1",
-    "jest": "^22.1.4",
-    "jest-enzyme": "^4.1.1",
-    "nodemon": "^1.14.11",
+    "jest": "^22.3.0",
+    "jest-enzyme": "^4.2.0",
+    "nodemon": "^1.15.0",
     "npm-run-all": "^4.1.2",
     "prop-types": "^15.6.0",
     "react-icons": "^2.2.7",
