--- a/packages/desktop/package.json
+++ b/packages/desktop/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "description": "Sistrac - Desktop Client Version",
   "dependencies": {
-    "@devasatyam/controls": "^1.0.0",
+    "@devasatyam/controls": "*",
     "apollo-client-preset": "^1.0.6",
     "bootstrap": "^4.0.0",
     "formatcoords": "^1.1.3",
@@ -21,22 +21,26 @@
     "react-loadable": "^5.3.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "^1.1.0",
+    "react-scripts": "^1.1.1",
     "recompose": "^0.26.0",
     "redux": "^3.7.2",
-    "redux-form": "^7.2.1",
+    "redux-form": "^7.2.3",
     "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "cross-env NODE_PATH=$NODE_PATH:./src/_ react-scripts start",
-    "build": "cross-env NODE_PATH=$NODE_PATH:./src/_ run-s build:clean build:compile",
+    "build":
+      "cross-env NODE_PATH=$NODE_PATH:./src/_ run-s build:clean build:compile",
     "build:clean": "rimraf build",
     "build:compile": "react-scripts build",
-    "test": "cross-env NODE_PATH=$NODE_PATH:./src/_ react-scripts test --env=jsdom",
-    "test:debug": "cross-env NODE_PATH=$NODE_PATH:./src/_ react-scripts --inspect-brk test --runInBand --env=jsdom",
+    "test":
+      "cross-env NODE_PATH=$NODE_PATH:./src/_ react-scripts test --env=jsdom",
+    "test:debug":
+      "cross-env NODE_PATH=$NODE_PATH:./src/_ react-scripts --inspect-brk test --runInBand --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "eslint --ext .jsx,.js . || exit 0",
-    "analyze": "run-p analyze:main analyze:login analyze:estaciones analyze:estacion analyze:editEstacion",
+    "analyze":
+      "run-p analyze:main analyze:login analyze:estaciones analyze:estacion analyze:editEstacion",
     "analyze:main": "source-map-explorer build/static/js/main.*",
     "analyze:login": "source-map-explorer build/static/js/login.*",
     "analyze:estaciones": "source-map-explorer build/static/js/estaciones.*",
@@ -56,9 +60,6 @@
     "source-map-explorer": "^1.5.0"
   },
   "jest": {
-    "coverageReporters": [
-      "html",
-      "text"
-    ]
+    "coverageReporters": ["html", "text"]
   }
 }
