--- a/packages/desktop/package.json
+++ b/packages/desktop/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.0",
   "description": "Sistrac - Desktop Client Version",
   "dependencies": {
-    "@devasatyam/controls": "*",
+    "@devasatyam/controls": "^1.0.0",
     "apollo-client-preset": "^1.0.6",
     "bootstrap": "^4.0.0",
+    "final-form": "^4.2.0",
     "formatcoords": "^1.1.3",
     "graphql": "^0.12.3",
     "graphql-tag": "^2.6.1",
@@ -15,6 +16,7 @@
     "react": "^16.2.0",
     "react-apollo": "^2.0.4",
     "react-dom": "^16.2.0",
+    "react-final-form": "^3.1.0",
     "react-helmet": "^5.2.0",
     "react-icons": "^2.2.7",
     "react-leaflet": "^1.8.0",
@@ -24,7 +26,6 @@
     "react-scripts": "^1.1.1",
     "recompose": "^0.26.0",
     "redux": "^3.7.2",
-    "redux-form": "^7.2.3",
     "redux-thunk": "^2.2.0"
   },
   "scripts": {
