--- a/packages/desktop/package.json
+++ b/packages/desktop/package.json
@@ -4,12 +4,13 @@
   "description": "Sistrac - Desktop Client Version",
   "dependencies": {
     "@devasatyam/controls": "^1.0.0",
-    "apollo-client-preset": "^1.0.6",
+    "apollo-client-preset": "^1.0.8",
     "bootstrap": "^4.0.0",
-    "final-form": "^4.2.0",
+    "bootswatch": "^4.0.0",
+    "final-form": "^4.2.1",
     "formatcoords": "^1.1.3",
     "graphql": "^0.12.3",
-    "graphql-tag": "^2.6.1",
+    "graphql-tag": "^2.8.0",
     "leaflet": "^1.3.1",
     "parse-dms": "0.0.3",
     "prop-types": "^15.6.0",
@@ -19,9 +20,9 @@
     "react-final-form": "^3.1.0",
     "react-helmet": "^5.2.0",
     "react-icons": "^2.2.7",
-    "react-leaflet": "^1.8.0",
+    "react-leaflet": "^1.8.1",
     "react-loadable": "^5.3.1",
-    "react-redux": "^5.0.6",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.1.1",
     "recompose": "^0.26.0",
@@ -50,7 +51,7 @@
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "fetch-mock": "^5.13.1",
-    "jest-enzyme": "^4.1.1",
+    "jest-enzyme": "^4.2.0",
     "npm-run-all": "^4.1.2",
     "react-test-renderer": "^16.2.0",
     "redux-mock-store": "^1.5.1",
