--- a/packages/desktop/package.json
+++ b/packages/desktop/package.json
@@ -32,25 +32,39 @@
   },
   "scripts": {
     "start": "cross-env NODE_PATH=$NODE_PATH:./src/_ react-scripts start",
-    "build": "cross-env NODE_PATH=$NODE_PATH:./src/_ run-s build:clean build:compile",
+    "build":
+      "cross-env NODE_PATH=$NODE_PATH:./src/_ run-s build:clean build:compile",
     "build:clean": "rimraf build",
     "build:compile": "react-scripts build",
-    "test": "cross-env NODE_PATH=$NODE_PATH:./src/_ react-scripts test --env=jsdom",
-    "test:debug": "cross-env NODE_PATH=$NODE_PATH:./src/_ react-scripts --inspect-brk test --runInBand --env=jsdom",
+    "test":
+      "cross-env NODE_PATH=$NODE_PATH:./src/_ react-scripts test --env=jsdom",
+    "test:debug":
+      "cross-env NODE_PATH=$NODE_PATH:./src/_ react-scripts --inspect-brk test --runInBand --env=jsdom",
     "eject": "react-scripts eject",
-    "lint": "eslint --ext .jsx,.js . || exit 0",
-    "analyze": "run-p analyze:main analyze:login analyze:estaciones analyze:estacion analyze:editEstacion",
+    "lint": "eslint -c .eslintrcCli --ext .jsx,.js . || exit 0",
+    "analyze":
+      "run-p analyze:main analyze:login analyze:estaciones analyze:estacion analyze:editEstacion",
     "analyze:main": "source-map-explorer build/static/js/main.*",
     "analyze:login": "source-map-explorer build/static/js/login.*",
     "analyze:estaciones": "source-map-explorer build/static/js/estaciones.*",
     "analyze:estacion": "source-map-explorer build/static/js/estacion.*",
-    "analyze:editEstacion": "source-map-explorer build/static/js/editEstacion.*"
+    "analyze:editEstacion":
+      "source-map-explorer build/static/js/editEstacion.*",
+    "flow": "flow",
+    "flow-typed": "flow-typed install",
+    "docs": "documentation build src/index.js -f html -o docs"
   },
   "devDependencies": {
     "cross-env": "^5.1.3",
+    "documentation": "^5.4.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-flowtype": "^2.46.1",
+    "eslint-plugin-prettier": "^2.6.0",
     "fetch-mock": "^5.13.1",
+    "flow-bin": "^0.66.0",
+    "flow-typed": "^2.3.0",
     "jest-enzyme": "^4.2.0",
     "npm-run-all": "^4.1.2",
     "react-test-renderer": "^16.2.0",
@@ -59,9 +73,6 @@
     "source-map-explorer": "^1.5.0"
   },
   "jest": {
-    "coverageReporters": [
-      "html",
-      "text"
-    ]
+    "coverageReporters": ["html", "text"]
   }
 }
