--- a/packages/desktop/package.json
+++ b/packages/desktop/package.json
@@ -6,20 +6,20 @@
     "@devasatyam/react-bootstrap-4-controls": "^0.1.3",
     "apollo-client-preset": "^1.0.8",
     "bootswatch": "^4.0.0",
-    "final-form": "^4.2.1",
+    "final-form": "^4.4.0",
     "formatcoords": "^1.1.3",
-    "graphql": "^0.12.3",
+    "graphql": "^0.13.2",
     "graphql-tag": "^2.8.0",
     "leaflet": "^1.3.1",
     "parse-dms": "0.0.3",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
-    "react-apollo": "^2.0.4",
+    "react-apollo": "^2.1.0",
     "react-dom": "^16.2.0",
-    "react-final-form": "^3.1.2",
+    "react-final-form": "^3.1.5",
     "react-helmet": "^5.2.0",
     "react-icons": "^2.2.7",
-    "react-leaflet": "^1.8.2",
+    "react-leaflet": "^1.9.1",
     "react-loadable": "^5.3.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
@@ -27,7 +27,7 @@
     "recompose": "^0.26.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "unstated": "^1.0.3"
+    "unstated": "^1.1.0"
   },
   "scripts": {
     "start": "cross-env NODE_PATH=$NODE_PATH:./src/_ react-scripts start",
@@ -49,17 +49,18 @@
     "docs": "documentation build src/index.js -f html -o docs"
   },
   "devDependencies": {
-    "cross-env": "^5.1.3",
+    "cross-env": "^5.1.4",
     "documentation": "^6.1.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-flowtype": "^2.46.1",
     "eslint-plugin-prettier": "^2.6.0",
-    "fetch-mock": "^6.0.1",
-    "flow-bin": "^0.66.0",
-    "flow-typed": "^2.3.0",
-    "jest-enzyme": "^5.0.3",
+    "fetch-mock": "^6.3.0",
+    "flow-bin": "^0.68.0",
+    "flow-typed": "^2.4.0",
+    "jest-cli": "^22.4.3",
+    "jest-enzyme": "^6.0.0",
     "npm-run-all": "^4.1.2",
     "react-test-renderer": "^16.2.0",
     "redux-mock-store": "^1.5.1",
